Dynamically populate library list

--- a/popup.html
+++ b/popup.html
@@ -7,11 +7,7 @@
   <body>
     <h1>Inject Libraries</h1>
     <p>Select the libraries of your choice below.</p>
-    <ul>
-      <li>jQuery</li>
-      <li>Lodash</li>
-      <li>Ramda</li>
-    </ul>
+    <ul id="libraryList"></ul>
     <button>Inject!</button>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/popup.js"></script>
