Make popup html look good

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Inject Libraries</h1>
-    <p>Select the libraries of your choice below.</p>
+    <p>Select the libraries you want to load below.</p>
     <ul id="libraryList"></ul>
     <button>Inject!</button>
     <script src="scripts/jquery.min.js"></script>
