--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <h1>Inject Libraries</h1>
     <p>Select the libraries you want to load below.</p>
     <ul id="libraryList"></ul>
-    <button>Inject!</button>
+    <button id="inject">Inject!</button>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/popup.js"></script>
   </body>
