Add more scripts

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Inject Libraries</h1>
-    <p>Select the libraries you want to load below.</p>
+    <p>Select the libraries you wish to inject below.</p>
+
     <ul id="libraryList"></ul>
     <button id="inject">Inject!</button>
     <script src="scripts/jquery.min.js"></script>
