feature: can add link to a script and inject it

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,10 @@
     <p>Select the libraries you wish to inject below.</p>
 
     <ul id="libraryList"></ul>
+    <form id="custom-script">
+      Custom Script: 
+      <input type="text" id="script-url">
+    </form>
     <button id="inject">Inject!</button>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/popup.js"></script>
